--- a/css/styles.css
+++ b/css/styles.css
@@ -1,95 +1,315 @@
 @font-face {
+  font-family: 'Cuprum';
+  src: local('Cuprum'),
+    url('../fonts/cuprum.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Cuprum';
+  src: local('Cuprum'),
+    url('../fonts/cuprum.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Cuprum';
+  src: local('Cuprum Bold'),
+    url('../fonts/cuprumbold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Cuprum';
+  src: local('Cuprum Bold'),
+    url('../fonts/cuprumbold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Cuprum';
+  src: local('Cuprum Bold Italic'),
+    url('../fonts/cuprumbolditalic.woff2') format('woff2');
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Cuprum';
+  src: local('Cuprum Bold Italic'),
+    url('../fonts/cuprumbolditalic.woff') format('woff');
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Cuprum';
+  src: local('Cuprum Italic'),
+    url('../fonts/cuprumitalic.woff') format('woff');
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Cuprum';
+  src: local('Cuprum Italic'),
+    url('../fonts/cuprumitalic.woff2') format('woff2');
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'PT Sans';
+  src: local('PT Sans'),
+    url('../fonts/ptsans.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PT Sans';
+  src: local('PT Sans'),
+    url('../fonts/ptsans.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PT Sans';
+  src: local('PT Sans Bold'),
+    url('../fonts/ptsansbold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PT Sans';
+  src: local('PT Sans Bold'),
+    url('../fonts/ptsansbold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+
+html {
+	background-color: green;
+}
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
+
+.red-btn {
+  font-family: 'Cuprum';
+  font-style: normal;
+  color: #ffffff;
+  background-color: #ff3333;
+  line-height: 18px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.header-top-search,
+.header-top-btn {
+  font-family: 'Cuprum';
+  font-size: 17px;
+  font-weight: 400;
+  font-style: normal;
+  color: #ffffff;
+  line-height: 18px;
+}
+
+.header-mid h1 {
+  font-family: 'Cuprum';
+  font-size: 16px;
+  font-weight: 400;
+  font-style: italic;
+  color: #ff3333;
+  line-height: 23px;
+}
+
+.header-tel {
+  font-family: 'Cuprum';
+  font-size: 21px;
+  font-weight: 400;
+  font-style: normal;
+  color: #ff3333;
+  line-height: 21px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.login-enter,
+.login-reg,
+.user-profile {
+  font-family: 'Cuprum';
+  font-size: 21px;
+  font-weight: 400;
+  font-style: normal;
+  color: #000000;
+  line-height: 21px;
+}
+
+.header-adress {
+  font-family: 'Cuprum';
+  font-size: 14px;
+  font-weight: 400;
+  font-style: normal;
+  color: #333366;
+  line-height: 24px;
+}
+
+.user-menu-item-orders,
+.user-menu-item-panel {
+  font-family: 'Cuprum';
+  font-size: 16px;
+  font-weight: 400;
+  font-style: normal;
+  color: #333366;
+  line-height: 18px;
+}
+
+.main-nav-item {
+  font-family: 'Cuprum';
+  font-size: 17px;
+  font-weight: 400;
+  font-style: normal;
+  color: #ffffff;
+  line-height: 17px;
+}
+
+.categories-item h3 {
+  font-family: 'Cuprum';
+  font-size: 24px;
+  font-weight: 700;
+  font-style: normal;
+  color: #ffffff;
+  line-height: 30px;
+}
+
+.categories-item-btn {
+  font-family: 'Cuprum';
+  font-size: 14px;
+  font-weight: 400;
+  font-style: normal;
+  color: #ffffff;
+  line-height: 18px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.popular-goods-title ,
+.popular-brands-title  {
+  font-family: 'Cuprum';
+  font-size: 30px;
+  font-weight: 400;
+  font-style: normal;
+  color: #333366;
+  line-height: 30px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.popular-goods-item h3 {
+  font-family: 'Cuprum';
+  font-size: 18px;
+  font-weight: 700;
+  font-style: normal;
+  color: #000000;
+  line-height: 20px;
+}
+
+.goods-old-price {
+  font-family: 'PT Sans';
+  font-size: 17px;  
+  font-weight: 700;
+  font-style: normal;
+  color: #999999;
+  text-decoration: line-through;
+  text-transform: uppercase;
+  line-height: 18px;
+}
+
+.service-headline,
+.about-company-title,
+.about-contacts-title {
+  font-family: 'Cuprum';  
+  font-size: 30px;
+  font-weight: 400;
+  font-style: normal;
+  color: #000000;
+  text-transform: uppercase;
+  line-height: 30px;
+}
+
+.service-title,
+.service-slider-description p,
+.about-company-description,
+.about-contacts-description {
+  font-family: 'PT Sans';
+  font-size: 13px;  
+  font-weight: 400;
+  font-style: normal;
+  color: #000000;
+  line-height: 24px;
+}
+
+.service-slider-description span {
+  font-family: 'Cuprum';  
+  font-size: 36px;
+  font-weight: 400;
+  font-style: normal;
+  color: #333366;
+  text-transform: uppercase;
+  line-height: 36px;
+}
+
+.partners-list-item {
 	font-family: 'Cuprum';
-	src: local('Cuprum'),
-		 url('fonts/cuprum.woff') format('woff');
+	font-size: 18px;
 	font-weight: 400;
 	font-style: normal;
+	color: #000000;
+	line-height: 20px;
 }
 
-@font-face {
+.footer-nav-item,
+.footer-proposal-item {
 	font-family: 'Cuprum';
-	src: local('Cuprum'),
-		 url('fonts/cuprum.woff2') format('woff2');
+	font-size: 18px;
 	font-weight: 400;
 	font-style: normal;
+	line-height: 24px;	
 }
 
-@font-face {
-	font-family: 'Cuprum';
-	src: local('Cuprum Bold'),
-		 url('fonts/cuprumbold.woff2') format('woff2');
-	font-weight: 700;
-	font-style: normal;
+.footer-nav-item {
+	color: #ffffff;
 }
 
-@font-face {
-	font-family: 'Cuprum';
-	src: local('Cuprum Bold'),
-		 url('fonts/cuprumbold.woff') format('woff');
-	font-weight: 700;
-	font-style: normal;
+.footer-proposal-item {
+	color: #ffcc99;
 }
 
-@font-face {
+.footer-copyright,
+.footer-mail,
+.footer-academy {
 	font-family: 'Cuprum';
-	src: local('Cuprum Bold Italic'),
-		 url('fonts/cuprumbolditalic.woff2') format('woff2');
-	font-weight: 700;
-	font-style: italic;
-}
-
-@font-face {
-	font-family: 'Cuprum';
-	src: local('Cuprum Bold Italic'),
-		 url('fonts/cuprumbolditalic.woff') format('woff');
-	font-weight: 700;
-	font-style: italic;
-}
-
-@font-face {
-	font-family: 'Cuprum';
-	src: local('Cuprum Italic'),
-		 url('fonts/cuprumitalic.woff') format('woff');
+	font-size: 16px;
 	font-weight: 400;
-	font-style: italic;
-}
-
-@font-face {
-	font-family: 'Cuprum';
-	src: local('Cuprum Italic'),
-		 url('fonts/cuprumitalic.woff2') format('woff2');
-	font-weight: 400;
-	font-style: italic;
-}
-
-@font-face {
-	font-family: 'PT Sans';
-	src: local('PT Sans'),
-		 url('fonts/ptsans.woff2') format('woff2');
-	font-weight: 400;
+	color: #ffffff;
 	font-style: normal;
+	line-height: 18px;		
 }
 
-@font-face {
-	font-family: 'PT Sans';
-	src: local('PT Sans'),
-		 url('fonts/ptsans.woff') format('woff');
-	font-weight: 400;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'PT Sans';
-	src: local('PT Sans Bold'),
-		 url('fonts/ptsansbold.woff2') format('woff2');
-	font-weight: 700;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'PT Sans';
-	src: local('PT Sans Bold'),
-		 url('fonts/ptsansbold.woff') format('woff');
-	font-weight: 700;
-	font-style: normal;
+.footer-mail a,
+.footer-academy a {
+	color: #ffcc99;
+	text-decoration: none;
 }
