--- a/css/styles.css
+++ b/css/styles.css
@@ -107,7 +107,7 @@ html {
 }
 
 .red-btn {
-  font-family: 'Cuprum';
+  font-family: 'Cuprum', 'Arial', sans-serif;
   font-style: normal;
   color: #ffffff;
   background-color: #ff3333;
@@ -118,7 +118,7 @@ html {
 
 .header-top-search,
 .header-top-btn {
-  font-family: 'Cuprum';
+  font-family: 'Cuprum', 'Arial', sans-serif;
   font-size: 17px;
   font-weight: 400;
   font-style: normal;
@@ -127,7 +127,7 @@ html {
 }
 
 .header-mid h1 {
-  font-family: 'Cuprum';
+  font-family: 'Cuprum', 'Arial', sans-serif;
   font-size: 16px;
   font-weight: 400;
   font-style: italic;
@@ -136,7 +136,7 @@ html {
 }
 
 .header-tel {
-  font-family: 'Cuprum';
+  font-family: 'Cuprum', 'Arial', sans-serif;
   font-size: 21px;
   font-weight: 400;
   font-style: normal;
@@ -148,8 +148,9 @@ html {
 
 .login-enter,
 .login-reg,
-.user-profile {
-  font-family: 'Cuprum';
+.user-profile,
+.user-menu-item-profile {
+  font-family: 'Cuprum', 'Arial', sans-serif;
   font-size: 21px;
   font-weight: 400;
   font-style: normal;
@@ -158,7 +159,7 @@ html {
 }
 
 .header-adress {
-  font-family: 'Cuprum';
+  font-family: 'Cuprum', 'Arial', sans-serif;
   font-size: 14px;
   font-weight: 400;
   font-style: normal;
@@ -167,8 +168,9 @@ html {
 }
 
 .user-menu-item-orders,
-.user-menu-item-panel {
-  font-family: 'Cuprum';
+.user-menu-item-control-panel
+ {
+  font-family: 'Cuprum', 'Arial', sans-serif;
   font-size: 16px;
   font-weight: 400;
   font-style: normal;
@@ -177,7 +179,7 @@ html {
 }
 
 .main-nav-item {
-  font-family: 'Cuprum';
+  font-family: 'Cuprum', 'Arial', sans-serif;
   font-size: 17px;
   font-weight: 400;
   font-style: normal;
@@ -186,7 +188,7 @@ html {
 }
 
 .categories-item h3 {
-  font-family: 'Cuprum';
+  font-family: 'Cuprum', 'Arial', sans-serif;
   font-size: 24px;
   font-weight: 700;
   font-style: normal;
@@ -195,7 +197,7 @@ html {
 }
 
 .categories-item-btn {
-  font-family: 'Cuprum';
+  font-family: 'Cuprum', 'Arial', sans-serif;
   font-size: 14px;
   font-weight: 400;
   font-style: normal;
@@ -207,7 +209,7 @@ html {
 
 .popular-goods-title ,
 .popular-brands-title  {
-  font-family: 'Cuprum';
+  font-family: 'Cuprum', 'Arial', sans-serif;
   font-size: 30px;
   font-weight: 400;
   font-style: normal;
@@ -217,8 +219,9 @@ html {
   text-decoration: none;
 }
 
-.popular-goods-item h3 {
-  font-family: 'Cuprum';
+.popular-goods-item h3,
+.catalog-item-title {
+  font-family: 'PT Sans', 'Arial', sans-serif;
   font-size: 18px;
   font-weight: 700;
   font-style: normal;
@@ -226,8 +229,19 @@ html {
   line-height: 20px;
 }
 
+.popular-goods-price,
+.catalog-item-price {
+  font-family: 'PT Sans', 'Arial', sans-serif;
+  font-size: 17px;  
+  font-weight: 700;
+  font-style: normal;
+  color: #ffffff;
+  text-transform: uppercase;
+  line-height: 18px;
+}
+
 .goods-old-price {
-  font-family: 'PT Sans';
+  font-family: 'PT Sans', 'Arial', sans-serif;
   font-size: 17px;  
   font-weight: 700;
   font-style: normal;
@@ -239,8 +253,9 @@ html {
 
 .service-headline,
 .about-company-title,
-.about-contacts-title {
-  font-family: 'Cuprum';  
+.about-contacts-title,
+.catalog-name {
+  font-family: 'Cuprum', 'Arial', sans-serif;  
   font-size: 30px;
   font-weight: 400;
   font-style: normal;
@@ -253,7 +268,7 @@ html {
 .service-slider-description p,
 .about-company-description,
 .about-contacts-description {
-  font-family: 'PT Sans';
+  font-family: 'PT Sans', 'Arial', sans-serif;
   font-size: 13px;  
   font-weight: 400;
   font-style: normal;
@@ -262,7 +277,7 @@ html {
 }
 
 .service-slider-description span {
-  font-family: 'Cuprum';  
+  font-family: 'Cuprum', 'Arial', sans-serif;  
   font-size: 36px;
   font-weight: 400;
   font-style: normal;
@@ -272,7 +287,7 @@ html {
 }
 
 .partners-list-item {
-	font-family: 'Cuprum';
+	font-family: 'Cuprum', 'Arial', sans-serif;
 	font-size: 18px;
 	font-weight: 400;
 	font-style: normal;
@@ -282,7 +297,7 @@ html {
 
 .footer-nav-item,
 .footer-proposal-item {
-	font-family: 'Cuprum';
+	font-family: 'Cuprum', 'Arial', sans-serif;
 	font-size: 18px;
 	font-weight: 400;
 	font-style: normal;
@@ -300,7 +315,7 @@ html {
 .footer-copyright,
 .footer-mail,
 .footer-academy {
-	font-family: 'Cuprum';
+	font-family: 'Cuprum', 'Arial', sans-serif;
 	font-size: 16px;
 	font-weight: 400;
 	color: #ffffff;
@@ -312,4 +327,62 @@ html {
 .footer-academy a {
 	color: #ffcc99;
 	text-decoration: none;
+}
+
+/*-----------end of index.html-----------*/
+
+.breadcrumbs-main a {
+  font-family: 'PT Sans', 'Arial', sans-serif;
+  font-size: 13px;  
+  font-weight: 400;
+  font-style: normal;
+  color: #000000;
+  line-height: 18px;
+  text-transform: uppercase;
+  text-decoration: none;	
+}
+
+.catalog-filter-title,
+.catalog-filter input[type="submit"] {
+  font-family: 'PT Sans', 'Arial', sans-serif;
+  font-size: 13px;  
+  font-weight: 400;
+  font-style: normal;
+  color: #000000;
+  line-height: 18px;
+  text-transform: uppercase;	
+}
+
+.catalog-filter-price legend,
+.catalog-filter-brand legend,
+.catalog-filter-power legend {
+  font-family: 'PT Sans', 'Arial', sans-serif;
+  font-size: 17px;  
+  font-weight: 700;
+  font-style: normal;
+  color: #000000;
+  text-transform: uppercase;
+  line-height: 30px;	
+}
+
+.catalog-filter-price label,
+.catalog-filter-brand label,
+.catalog-filter-power label {
+  font-family: 'PT Sans', 'Arial', sans-serif;
+  font-size: 15px;  
+  font-weight: 400;
+  font-style: normal;
+  color: #000000;
+  text-transform: uppercase;
+  line-height: 20px;	
+}
+
+.catalog-item-price {
+  font-family: 'PT Sans', 'Arial', sans-serif;
+  font-size: 17px;  
+  font-weight: 700;
+  font-style: normal;
+  color: #ffffff;
+  text-transform: uppercase;
+  line-height: 18px;
 }
