--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,17 @@
 }
 
 html {
-	background-color: green;
+  background-color: #f1f5f7;
+}
+
+ul {
+	list-style: none;
+	padding: 0;
+	margin:0;
+}
+
+a {
+	text-decoration: none;
 }
 
 .visually-hidden {
@@ -116,6 +126,26 @@ html {
   text-decoration: none;
 }
 
+.header-logo,
+.footer-logo {
+  font-family: 'PT Sans', 'Arial', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  font-style: normal;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #ffffff;
+  line-height: 20px;
+  background-color: #ff3333;
+}
+
+.header-logo:hover,
+.footer-logo:hover,
+.header-logo:active,
+.footer-logo:active {
+	background-color: #cc3333;	
+}
+
 .header-top-search,
 .header-top-btn {
   font-family: 'Cuprum', 'Arial', sans-serif;
@@ -124,6 +154,38 @@ html {
   font-style: normal;
   color: #ffffff;
   line-height: 18px;
+  background-color: #293449;
+  text-decoration: none;
+  border: none;
+}
+
+.header-top-btn:hover {
+	background-color: #212a3a;
+}
+
+.header-top-btn:active,
+.header-top-btn:focus {
+	color: #ffffff;
+	opacity: 0.6;
+	background-color: #161d29;
+}
+
+.header-top-search:focus {
+	background-color: #ffffff;
+	outline: none;
+	color: #000000;
+}
+
+.header-btn-order {
+	background-color: #63a63e;
+}
+
+.header-btn-order:hover {
+	background-color: #5fbb2d;
+}
+
+.header-btn-order:active {
+	background-color: #518534;
 }
 
 .header-mid h1 {
@@ -141,6 +203,7 @@ html {
   font-weight: 400;
   font-style: normal;
   color: #ff3333;
+  background-color: inherit;
   line-height: 21px;
   text-transform: uppercase;
   text-decoration: none;
@@ -148,14 +211,29 @@ html {
 
 .login-enter,
 .login-reg,
+.login-enter:visited,
+.login-reg:visited,
 .user-profile,
-.user-menu-item-profile {
+.user-menu-profile {
   font-family: 'Cuprum', 'Arial', sans-serif;
   font-size: 21px;
   font-weight: 400;
   font-style: normal;
   color: #000000;
   line-height: 21px;
+}
+
+.login-enter:hover,
+.login-reg:hover,
+.login-enter:focus,
+.login-reg:focus {
+	color: #ee3643;
+}
+
+.login-enter:active,
+.login-reg:active {
+	color: #000000;
+	opacity: 0.3;
 }
 
 .header-adress {
@@ -167,24 +245,49 @@ html {
   line-height: 24px;
 }
 
-.user-menu-item-orders,
-.user-menu-item-control-panel
- {
+.user-menu-orders,
+.user-menu-control-panel {
   font-family: 'Cuprum', 'Arial', sans-serif;
   font-size: 16px;
   font-weight: 400;
   font-style: normal;
   color: #333366;
   line-height: 18px;
+	text-decoration: underline;
 }
 
-.main-nav-item {
+.user-menu-orders:hover,
+.user-menu-orders:focus,
+.user-menu-control-panel:hover, 
+.user-menu-control-panel:focus {
+	color: #ee3643;
+}
+
+.user-menu-item:active {
+	color: #32425c;
+	opacity: 0.3;
+}
+
+.main-nav-item a {
   font-family: 'Cuprum', 'Arial', sans-serif;
   font-size: 17px;
   font-weight: 400;
   font-style: normal;
-  color: #ffffff;
+  color: #ffffff;  
   line-height: 17px;
+}
+
+.main-nav-item {
+	background-color: #32425c;
+}
+
+.main-nav-item:hover,
+.main-nav-item:focus {
+	background-color: #293449;
+}
+
+.main-nav-item:active a {
+	opacity: 0.5;
 }
 
 .categories-item h3 {
@@ -207,8 +310,8 @@ html {
   text-decoration: none;
 }
 
-.popular-goods-title ,
-.popular-brands-title  {
+.popular-goods-title,
+.popular-brands-title {
   font-family: 'Cuprum', 'Arial', sans-serif;
   font-size: 30px;
   font-weight: 400;
@@ -232,7 +335,7 @@ html {
 .popular-goods-price,
 .catalog-item-price {
   font-family: 'PT Sans', 'Arial', sans-serif;
-  font-size: 17px;  
+  font-size: 17px;
   font-weight: 700;
   font-style: normal;
   color: #ffffff;
@@ -242,7 +345,7 @@ html {
 
 .goods-old-price {
   font-family: 'PT Sans', 'Arial', sans-serif;
-  font-size: 17px;  
+  font-size: 17px;
   font-weight: 700;
   font-style: normal;
   color: #999999;
@@ -255,7 +358,7 @@ html {
 .about-company-title,
 .about-contacts-title,
 .catalog-name {
-  font-family: 'Cuprum', 'Arial', sans-serif;  
+  font-family: 'Cuprum', 'Arial', sans-serif;
   font-size: 30px;
   font-weight: 400;
   font-style: normal;
@@ -269,7 +372,7 @@ html {
 .about-company-description,
 .about-contacts-description {
   font-family: 'PT Sans', 'Arial', sans-serif;
-  font-size: 13px;  
+  font-size: 13px;
   font-weight: 400;
   font-style: normal;
   color: #000000;
@@ -277,7 +380,7 @@ html {
 }
 
 .service-slider-description span {
-  font-family: 'Cuprum', 'Arial', sans-serif;  
+  font-family: 'Cuprum', 'Arial', sans-serif;
   font-size: 36px;
   font-weight: 400;
   font-style: normal;
@@ -287,102 +390,222 @@ html {
 }
 
 .partners-list-item {
-	font-family: 'Cuprum', 'Arial', sans-serif;
-	font-size: 18px;
-	font-weight: 400;
-	font-style: normal;
-	color: #000000;
-	line-height: 20px;
+  font-family: 'Cuprum', 'Arial', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  font-style: normal;
+  color: #000000;
+  line-height: 20px;
 }
 
-.footer-nav-item,
-.footer-proposal-item {
-	font-family: 'Cuprum', 'Arial', sans-serif;
-	font-size: 18px;
-	font-weight: 400;
-	font-style: normal;
-	line-height: 24px;	
+.footer-top {
+	background-color: #32425c;
 }
 
-.footer-nav-item {
-	color: #ffffff;
+.footer-nav-item a,
+.footer-proposal-item a {
+  font-family: 'Cuprum', 'Arial', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 24px;
 }
 
-.footer-proposal-item {
-	color: #ffcc99;
+.footer-nav-item a {
+  color: #ffffff;
+}
+
+.footer-proposal-item a {
+  color: #ffcc99;
+}
+
+.footer-nav-item a:hover,
+.footer-nav-item a:focus,
+.footer-proposal-item a:hover,
+.footer-proposal-item a:focus {
+  text-decoration: underline;
+}
+
+.footer-nav-item a:active,
+.footer-proposal-item a:active {
+  opacity: 0.5;
+  text-decoration: none;
 }
 
 .footer-copyright,
 .footer-mail,
 .footer-academy {
-	font-family: 'Cuprum', 'Arial', sans-serif;
-	font-size: 16px;
-	font-weight: 400;
-	color: #ffffff;
-	font-style: normal;
-	line-height: 18px;		
+  font-family: 'Cuprum', 'Arial', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: #ffffff;
+  font-style: normal;
+  line-height: 18px;
+}
+
+.footer-socials a {	
+	background-color: #000;
+}
+
+.footer-socials a:hover,
+.footer-socials a:focus,
+.footer-socials a:active {
+	background-color: #ee3643;
+}
+
+.footer-socials-vk {
+	display: block;
+	width: 30px;
+	height: 30px;
+	background: url(../img/icon-vk.svg) no-repeat 100% 0;
+
 }
 
 .footer-mail a,
 .footer-academy a {
-	color: #ffcc99;
-	text-decoration: none;
+  color: #ffcc99;
+  text-decoration: none;
+}
+
+.footer-mail a:hover,
+.footer-academy a:hover,
+.footer-mail a:focus,
+.footer-academy a:focus {
+  text-decoration: underline;
+}
+
+.footer-mail a:focus,
+.footer-academy a:focus {
+  text-decoration: none;
+  color: #ee3643;
 }
 
 /*-----------end of index.html-----------*/
 
 .breadcrumbs-main a {
   font-family: 'PT Sans', 'Arial', sans-serif;
-  font-size: 13px;  
+  font-size: 13px;
   font-weight: 400;
   font-style: normal;
   color: #000000;
   line-height: 18px;
   text-transform: uppercase;
-  text-decoration: none;	
+  text-decoration: none;
 }
 
 .catalog-filter-title,
 .catalog-filter input[type="submit"] {
   font-family: 'PT Sans', 'Arial', sans-serif;
-  font-size: 13px;  
+  font-size: 13px;
   font-weight: 400;
   font-style: normal;
   color: #000000;
   line-height: 18px;
-  text-transform: uppercase;	
+  text-transform: uppercase;
 }
 
 .catalog-filter-price legend,
 .catalog-filter-brand legend,
 .catalog-filter-power legend {
   font-family: 'PT Sans', 'Arial', sans-serif;
-  font-size: 17px;  
+  font-size: 17px;
   font-weight: 700;
   font-style: normal;
   color: #000000;
   text-transform: uppercase;
-  line-height: 30px;	
+  line-height: 30px;
 }
 
 .catalog-filter-price label,
 .catalog-filter-brand label,
 .catalog-filter-power label {
   font-family: 'PT Sans', 'Arial', sans-serif;
-  font-size: 15px;  
+  font-size: 15px;
   font-weight: 400;
   font-style: normal;
   color: #000000;
   text-transform: uppercase;
-  line-height: 20px;	
+  line-height: 20px;
+}
+
+.catalog-filter input[type="checkbox"],
+.catalog-filter input[type="radio"] {
+	font-family: 'PT Sans', 'Arial', sans-serif;
+	font-size: 15px;
+	font-weight: 400;
+	font-style: normal;
+	color: #000000;
+	text-transform: uppercase;
+}
+
+.catalog-filter input[disabled] + label,
+.catalog-filter input[disabled] + label{
+	opacity: 0.4;
+}
+
+.catalog-item {
+	position: relative;
 }
 
 .catalog-item-price {
   font-family: 'PT Sans', 'Arial', sans-serif;
-  font-size: 17px;  
+  font-size: 17px;
   font-weight: 700;
   font-style: normal;
   color: #ffffff;
   text-transform: uppercase;
   line-height: 18px;
 }
+
+.catalog-item-popup {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.catalog-item:hover .catalog-item-popup {
+	display: block;
+}
+
+.catalog-item-popup a {
+	font-family: 'Cuprum', 'Arial', sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	font-style: normal;
+	text-transform: uppercase;
+	line-height: 18px;
+}
+
+.catalog-item-popup-buy {
+	background-color: #63a63e;
+	color: #ffffff;
+}
+
+.catalog-item-popup-buy:hover,
+.catalog-item-popup-buy:focus {
+	background-color: #5fbb2d;
+}
+
+.catalog-item-popup-buy:active {
+	background-color: #518534;
+}
+
+.catalog-item-popup-bookmarks {
+	background-color: #ffffff;
+	color: #32425c;
+	border: 2px solid #63a63e;
+	border-radius: 2px;
+}
+
+.catalog-item-popup-bookmarks:hover,
+.catalog-item-popup-bookmarks:focus {
+	border-color: #32425c;
+}
+
+.catalog-item-popup-bookmarks:active {
+	opacity: 0.3;
+}
+
