--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@
 }
 
 body {
-  background-color: #f1f5f7;
+  background-color: #ffffff;
   margin: 0;
 }
 
@@ -67,6 +67,12 @@ a {
   width: 1px;
   height: 1px;
   margin: -1px;
+}
+
+.container {
+	display: flex;
+	width: 940px;
+	margin: 0 10px;
 }
 
 .primary-btn {
@@ -88,7 +94,7 @@ a {
   text-transform: uppercase;
   text-decoration: none;
   color: #ffffff;
-  line-height: 20px;
+  line-height: 45px;
   background-color: #ee3643;
 }
 
@@ -107,7 +113,7 @@ a {
   font-weight: 400;
   font-style: normal;
   color: #ffffff;
-  line-height: 18px;
+  line-height: 45px;
   background-color: #293449;
   text-decoration: none;
   border: none;
@@ -157,7 +163,8 @@ a {
   font-style: normal;
   color: #ff3333;
   background-color: inherit;
-  line-height: 21px;
+  line-height: 40px;
+  border: 3px solid #ffffff;
   text-transform: uppercase;
   text-decoration: none;
 }
@@ -171,7 +178,7 @@ a {
   font-weight: 400;
   font-style: normal;
   color: #000000;
-  line-height: 21px;
+  line-height: 45px;
 }
 
 .login-enter:hover,
@@ -223,7 +230,7 @@ a {
   font-weight: 400;
   font-style: normal;
   color: #ffffff;
-  line-height: 17px;
+  line-height: 55px;
 }
 
 .main-nav-item {
@@ -429,6 +436,306 @@ a {
   color: #ee3643;
 }
 
+body {
+	display: flex;
+	flex-direction: column;
+}
+
+header {
+	display: flex;
+	min-height: 320px;
+	flex-direction: column;
+	align-items: center;
+	background-color: #f3f7f9;
+}
+
+.header-top {
+	display: flex;
+	width: 100%;
+	min-height: 45px;
+	margin-bottom: 45px;
+	justify-content: center;	
+	background-color: #293449;
+}
+
+.header-logo {
+	width: 220px;
+	text-align: center;
+	box-shadow:  0 5px 0 #b52933;
+}
+
+.header-top-search {
+	width: 270px;
+	padding-left: 10px;
+	margin-right: auto;
+}
+
+.header-top-btn {
+	width: 150px;
+}
+
+.header-mid {
+	display: flex;
+	justify-content: space-between;
+	min-height: 70px;
+	width: 940px;
+	margin: 0 10px 40px 10px;
+}
+
+.header-mid-title {
+	width: 195px;
+	margin: 0 0 0 55px;
+}
+
+.header-tel {
+	display: block;
+	width: 270px;
+	text-align: center;
+}
+
+.user-menu {
+	display: flex;
+	justify-content: space-between;
+	width: 280px;
+	list-style: none;
+	margin: 0;
+	margin-bottom: auto;
+	padding: 0;
+}
+
+.user-menu-btn {
+	display: block;
+	margin-left: 10px;
+	padding: 0 25px;
+	background-color: #ffffff;
+}
+
+.header-bot {
+	display: flex;
+	justify-content: center;
+	width: 940px;
+	margin: 0 10px;
+}
+
+.main-nav {
+	display: flex;
+	width: 100%;
+}
+
+.main-nav ul {
+	display: flex;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+.main-nav-item {
+	width: 100%;
+}
+
+.main-nav-item a {
+	display: block;
+	width: inherit;
+	text-align: center;
+}
+
+main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	min-height: 410px;
+}
+
+.categories {
+	display: flex;
+	padding-top: 60px;
+	width: 940px;
+	margin: 0 10px;
+
+}
+
+.categories-list-leftcol {
+	display: flex;
+	flex-wrap: wrap;
+	flex-basis: 620px;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.categories-list-rightcol {
+	display: flex;
+	flex-wrap: wrap;
+	list-style: none;
+	min-height: 410px;
+	margin: 0;
+	margin-left: auto;
+	padding: 0;
+}
+
+.categories-item {
+	flex-basis: 300px;
+	height: 125px;
+	margin-bottom: 20px;
+}
+
+.categories-item-materials {
+	background-color: #ffbf47;
+	margin-right: auto;
+}
+
+.categories-item-tools {
+	background-color: #3bbce3;
+}
+
+.categories-item-machines {
+	background-color: #dc91d8;
+}
+
+.categories-item-sale {
+	background-color: #8ed78f;
+}
+
+.categories-item-delivery {
+	background-color: #ffc047;
+}
+
+.categories-slider {
+	flex-grow: 1;
+	min-height: 265px;
+	width: 100%;
+	margin-top: 0;
+	background-color: black;
+}
+
+.popular-goods {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+}
+
+.popular-goods-intro {
+	display: flex;	
+	min-height: 90px;
+	background-color: #f9f5f0;
+}
+
+.popular-goods-title {
+	margin: auto;
+	margin-left: 30px;
+}
+
+.popular-goods-all {
+	margin: auto;
+	margin-right: 25px;
+	width: 250px;
+	padding: auto;
+	text-align: center;
+	line-height: 38px;
+}
+
+.popular-goods-list {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.popular-goods-item {
+	display: flex;
+	flex-direction: column;
+	align-items: center; 
+	width: 220px;
+	min-height: 318px;
+	border: solid 1px #eaeaea;
+}
+
+.popular-goods-item h3 {
+	width: 157px;
+	text-align: center;
+}
+
+.goods-old-price {
+	display: inline-block;
+	height: 15px;
+	margin-bottom: 10px;
+}
+
+.popular-goods-price {
+	display: block;
+	position: relative;
+	height: 38px;
+	width: 120px;
+	text-align: center;
+	line-height: 38px;
+	margin-bottom: 20px;
+}
+
+.popular-goods-price::after {
+	content: '';
+	display: block;
+	position: absolute;
+	top: 0;
+	right: -38px;
+	width: 0;
+	height: 0;
+	border: 19px solid transparent;
+	border-left: 19px solid #ff3333;
+}
+
+.popular-brands {
+	display: flex;
+	flex-direction: column;
+}
+
+.popular-brands-intro {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 10px;
+}
+
+.popular-brands-title {
+	margin: auto;
+	margin-left: 30px;
+}
+
+.popular-brands-all {
+	margin: auto;
+	margin-right: 25px;
+	width: 250px;
+	padding: auto;
+	text-align: center;
+	line-height: 38px;
+}
+
+.popular-brands-list {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+.popular-brands-item {
+	display: block;
+	min-width: 218px;
+	min-height: 143px;
+	margin: 10px auto;
+	border: solid 1px #eaeaea;
+}
+
+.popular-brands-item a {
+	display: flex;
+	width: 100%;
+	height: 100%;
+}
+
+.popular-brands-item img {
+	margin: auto;
+}
 /*-----------end of index.html-----------*/
 
 .breadcrumbs-main a {
