--- a/css/styles.css
+++ b/css/styles.css
@@ -1441,18 +1441,29 @@ a {
 
 .catalog-item:hover .catalog-item-popup {
   display: block;
+  width: 100%;
+  height: 180px;
+  background: #ffffff;
 }
 
 .catalog-item-popup a {
+  display: block;
   font-family: 'Cuprum', 'Arial', sans-serif;
   font-size: 14px;
   font-weight: 400;
   font-style: normal;
   text-transform: uppercase;
-  line-height: 18px;
+  border-radius: 3px;
 }
 
 .catalog-item-popup-buy {
+  position: absolute;
+  width: 135px;
+  line-height: 35px;
+  top: 44px;
+  left: 42px;
+  border-bottom: 3px solid #367315;
+  text-align: center;
   background-color: #63a63e;
   color: #ffffff;
 }
@@ -1467,6 +1478,14 @@ a {
 }
 
 .catalog-item-popup-bookmarks {
+  position: absolute;
+  width: 135px;
+  line-height: 35px;
+  top: 89px;
+  left: 42px;
+  max-width: 131px;
+  line-height: 35px;
+  text-align: center;
   background-color: #ffffff;
   color: #32425c;
   border: 2px solid #63a63e;
